search-engine/overlays/dev/crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: search-engine-crawler
      imagePullSecrets:
      - name: dockerconfigjson-github-com
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
