search-engine/overlays/dev/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: search-engine-ui
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          failureThreshold: 3
          successThreshold: 1
          initialDelaySeconds: 20
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerconfigjson-github-com
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
