search-engine/overlays/dev/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
spec:
  selector:
    app: ui
  ports:
    - name: dev-ui-metrics
      protocol: TCP
      port: 80
      targetPort: 8000
